--- a/R2_Master_V3.ioc
+++ b/R2_Master_V3.ioc
@@ -116,33 +116,30 @@ FDCAN3.NominalTimeSeg1=6
 FDCAN3.NominalTimeSeg2=3
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,Queues01
-FREERTOS.Queues01=NRF_RX_Queue,1,RemoteRXSturct,0,Dynamic,NULL,NULL;SuctionSpeed_Queue,1,int16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;RoboRun_Task,0,1024,RoboRunTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,1024,NRFTask,Default,NULL,Dynamic,NULL,NULL;Control_Task,0,1024,ControlTask,Default,NULL,Dynamic,NULL,NULL;HandleBall_Task,0,1024,HandleBallTask,Default,NULL,Dynamic,NULL,NULL;Suction_Task,0,512,SuctionTask,Default,NULL,Dynamic,NULL,NULL;Run1to3_Task,0,1024,Run1to3Task,Default,NULL,Dynamic,NULL,NULL;Vision_Task,0,1024,VisionTask,Default,NULL,Dynamic,NULL,NULL;VisionRun_Task,0,1024,VisionRunTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=NRF_RX_Queue,1,RemoteRXSturct,0,Dynamic,NULL,NULL;SuctionSpeed_Queue,1,int16_t,0,Dynamic,NULL,NULL;VisionData_Queue,1,VisionStruct,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;RoboRun_Task,0,1024,RoboRunTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,256,NRFTask,Default,NULL,Dynamic,NULL,NULL;Control_Task,0,1024,ControlTask,Default,NULL,Dynamic,NULL,NULL;HandleBall_Task,0,1024,HandleBallTask,Default,NULL,Dynamic,NULL,NULL;Suction_Task,0,512,SuctionTask,Default,NULL,Dynamic,NULL,NULL;Run1to3_Task,0,1024,Run1to3Task,Default,NULL,Dynamic,NULL,NULL;Vision_Task,0,1024,VisionTask,Default,NULL,Dynamic,NULL,NULL;VisionRun_Task,0,2048,VisionRunTask,Default,NULL,Dynamic,NULL,NULL;Start_Task,0,1024,StartTask,Default,NULL,Dynamic,NULL,NULL;DT35_Task,0,1024,DT35Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=65536
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C3.IPParameters=Timing
-I2C3.Timing=0x30A0A7FB
 KeepUserPlacement=false
 Mcu.CPN=STM32G474VET6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=FDCAN1
-Mcu.IP10=TIM2
-Mcu.IP11=UART4
-Mcu.IP12=UART5
-Mcu.IP13=USART1
-Mcu.IP14=USART2
-Mcu.IP15=USART3
+Mcu.IP10=UART4
+Mcu.IP11=UART5
+Mcu.IP12=USART1
+Mcu.IP13=USART2
+Mcu.IP14=USART3
 Mcu.IP2=FDCAN2
 Mcu.IP3=FDCAN3
 Mcu.IP4=FREERTOS
-Mcu.IP5=I2C3
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SPI4
-Mcu.IP9=SYS
-Mcu.IPNb=16
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI4
+Mcu.IP8=SYS
+Mcu.IP9=TIM2
+Mcu.IPNb=15
 Mcu.Name=STM32G474V(B-C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -159,39 +156,37 @@ Mcu.Pin18=PD12
 Mcu.Pin19=PD13
 Mcu.Pin2=PE4
 Mcu.Pin20=PD14
-Mcu.Pin21=PC8
-Mcu.Pin22=PC9
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PC10
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PC10
+Mcu.Pin28=PC11
+Mcu.Pin29=PC12
 Mcu.Pin3=PE5
-Mcu.Pin30=PC11
-Mcu.Pin31=PC12
-Mcu.Pin32=PD2
-Mcu.Pin33=PB3
-Mcu.Pin34=PB4
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin36=VP_SYS_VS_tim7
-Mcu.Pin37=VP_SYS_VS_DBSignals
-Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin39=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
+Mcu.Pin30=PD2
+Mcu.Pin31=PB3
+Mcu.Pin32=PB4
+Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin34=VP_SYS_VS_tim7
+Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 Mcu.Pin4=PE6
 Mcu.Pin5=PC13
 Mcu.Pin6=PF0-OSC_IN
 Mcu.Pin7=PF1-OSC_OUT
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=40
+Mcu.PinsNb=38
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32G474VETx
-MxCube.Version=6.11.0
-MxDb.Version=DB.6.0.110
+MxCube.Version=6.11.1
+MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
@@ -265,10 +260,6 @@ PC4.Mode=Asynchronous
 PC4.Signal=USART1_TX
 PC5.Mode=Asynchronous
 PC5.Signal=USART1_RX
-PC8.Mode=I2C
-PC8.Signal=I2C3_SCL
-PC9.Mode=I2C
-PC9.Signal=I2C3_SDA
 PD11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PD11.GPIO_Label=SOLE_P1
 PD11.GPIO_PuPd=GPIO_PULLDOWN
@@ -360,7 +351,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI4_Init-SPI4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_UART4_Init-UART4-false-HAL-true,12-MX_UART5_Init-UART5-false-HAL-true,13-MX_I2C3_Init-I2C3-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI4_Init-SPI4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_UART4_Init-UART4-false-HAL-true,12-MX_UART5_Init-UART5-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -427,7 +418,7 @@ TIM2.PeriodNoDither=10000
 TIM2.Prescaler=170
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART2.BaudRate=9600
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
