--- a/R2_Master_V3.ioc
+++ b/R2_Master_V3.ioc
@@ -116,8 +116,8 @@ FDCAN3.NominalTimeSeg1=6
 FDCAN3.NominalTimeSeg2=3
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,Queues01
-FREERTOS.Queues01=NRF_RX_Queue,1,RemoteRXSturct,0,Dynamic,NULL,NULL;SuctionSpeed_Queue,1,int16_t,0,Dynamic,NULL,NULL;VisionData_Queue,1,VisionStruct,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;RoboRun_Task,0,1024,RoboRunTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,256,NRFTask,Default,NULL,Dynamic,NULL,NULL;Control_Task,0,1024,ControlTask,Default,NULL,Dynamic,NULL,NULL;HandleBall_Task,0,1024,HandleBallTask,Default,NULL,Dynamic,NULL,NULL;Suction_Task,0,512,SuctionTask,Default,NULL,Dynamic,NULL,NULL;Run1to3_Task,0,1024,Run1to3Task,Default,NULL,Dynamic,NULL,NULL;Vision_Task,0,1024,VisionTask,Default,NULL,Dynamic,NULL,NULL;VisionRun_Task,0,2048,VisionRunTask,Default,NULL,Dynamic,NULL,NULL;Start_Task,0,1024,StartTask,Default,NULL,Dynamic,NULL,NULL;DT35_Task,0,1024,DT35Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=NRF_RX_Queue,1,RemoteRXSturct,0,Dynamic,NULL,NULL;SuctionSpeed_Queue,1,int16_t,0,Dynamic,NULL,NULL;VisionData_Queue,1,VisionStruct,0,Dynamic,NULL,NULL;ControlQueue,16,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;RoboRun_Task,0,1024,RoboRunTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,256,NRFTask,Default,NULL,Dynamic,NULL,NULL;Control_Task,0,1024,ControlTask,Default,NULL,Dynamic,NULL,NULL;HandleBall_Task,0,1024,HandleBallTask,Default,NULL,Dynamic,NULL,NULL;Suction_Task,0,512,SuctionTask,Default,NULL,Dynamic,NULL,NULL;Run1to3_Task,0,1024,Run1to3Task,Default,NULL,Dynamic,NULL,NULL;Vision_Task,0,1024,VisionTask,Default,NULL,Dynamic,NULL,NULL;VisionRun_Task,0,2048,VisionRunTask,Default,NULL,Dynamic,NULL,NULL;Start_Task,0,1024,StartTask,Default,NULL,Dynamic,NULL,NULL;DT35_Task,0,1024,DT35Task,Default,NULL,Dynamic,NULL,NULL;BaseControlTask,1,1024,basecontrol,Default,NULL,Dynamic,NULL,NULL;DisPatchTask,0,1024,dispatch,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=65536
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
