--- a/R2_Master_V3.ioc
+++ b/R2_Master_V3.ioc
@@ -116,8 +116,8 @@ FDCAN3.NominalTimeSeg1=6
 FDCAN3.NominalTimeSeg2=3
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,Queues01,FootprintOK
-FREERTOS.Queues01=NRF_RX_Queue,1,RemoteRXSturct,0,Dynamic,NULL,NULL;VisionData_Queue,1,VisionStruct,0,Dynamic,NULL,NULL;ControlQueue,16,ControlMsgStruct,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,1024,NRFTask,Default,NULL,Dynamic,NULL,NULL;ChassisTask,0,1024,chassis,Default,NULL,Dynamic,NULL,NULL;ClawTask,0,1024,claw,Default,NULL,Dynamic,NULL,NULL;SuctionTask,-1,1024,suction,Default,NULL,Dynamic,NULL,NULL;VisionComTask,-3,1024,visioncom,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=NRF_RX_Queue,1,RemoteRXSturct,0,Dynamic,NULL,NULL;VisionData_Queue,1,VisionStruct,0,Dynamic,NULL,NULL;ControlQueue,8,ControlMsgStruct,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,1024,NRFTask,Default,NULL,Dynamic,NULL,NULL;ChassisTask,0,2048,chassis,Default,NULL,Dynamic,NULL,NULL;ClawTask,0,2048,claw,Default,NULL,Dynamic,NULL,NULL;SuctionTask,0,2048,suction,Default,NULL,Dynamic,NULL,NULL;VisionComTask,0,2048,visioncom,Default,NULL,Dynamic,NULL,NULL;CloseLoopTask,0,2048,closeloop,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=65536
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
