--- a/R2_Master_V3.ioc
+++ b/R2_Master_V3.ioc
@@ -413,10 +413,14 @@ STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
-TIM2.IPParameters=Prescaler,PeriodNoDither
-TIM2.PeriodNoDither=10000
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=Prescaler,PeriodNoDither,AutoReloadPreload
+TIM2.PeriodNoDither=1000
 TIM2.Prescaler=170
-USART1.IPParameters=VirtualMode-Asynchronous
+UART5.BaudRate=1152000
+UART5.IPParameters=BaudRate
+USART1.BaudRate=1152000
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
