--- a/R2_Master_V3.ioc
+++ b/R2_Master_V3.ioc
@@ -117,33 +117,29 @@ FDCAN3.NominalTimeSeg2=3
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,Queues01,FootprintOK
 FREERTOS.Queues01=NRF_RX_Queue,1,RemoteRXSturct,0,Dynamic,NULL,NULL;VisionData_Queue,1,VisionStruct,0,Dynamic,NULL,NULL;ControlQueue,8,ControlMsgStruct,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,1024,NRFTask,Default,NULL,Dynamic,NULL,NULL;ChassisTask,0,2048,chassis,Default,NULL,Dynamic,NULL,NULL;ClawTask,0,2048,claw,Default,NULL,Dynamic,NULL,NULL;SuctionTask,0,2048,suction,Default,NULL,Dynamic,NULL,NULL;VisionComTask,0,4096,visioncom,Default,NULL,Dynamic,NULL,NULL;CloseLoopTask,0,2048,closeloop,Default,NULL,Dynamic,NULL,NULL;InitTask,3,1024,init,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Debug_Task,0,1024,DebugTask,Default,NULL,Dynamic,NULL,NULL;NRF_Task,0,1024,NRFTask,Default,NULL,Dynamic,NULL,NULL;ChassisTask,0,2048,chassis,Default,NULL,Dynamic,NULL,NULL;ClawTask,0,2048,claw,Default,NULL,Dynamic,NULL,NULL;SuctionTask,0,2048,suction,Default,NULL,Dynamic,NULL,NULL;VisionComTask,0,2048,visioncom,Default,NULL,Dynamic,NULL,NULL;CloseLoopTask,0,2048,closeloop,Default,NULL,Dynamic,NULL,NULL;InitTask,3,1024,init,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=65536
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-IWDG.IPParameters=Prescaler,Reload
-IWDG.Prescaler=IWDG_PRESCALER_256
-IWDG.Reload=4095
 KeepUserPlacement=false
 Mcu.CPN=STM32G474VET6
 Mcu.Family=STM32G4
 Mcu.IP0=DMA
 Mcu.IP1=FDCAN1
-Mcu.IP10=TIM2
-Mcu.IP11=UART4
-Mcu.IP12=UART5
-Mcu.IP13=USART1
-Mcu.IP14=USART2
-Mcu.IP15=USART3
+Mcu.IP10=UART4
+Mcu.IP11=UART5
+Mcu.IP12=USART1
+Mcu.IP13=USART2
+Mcu.IP14=USART3
 Mcu.IP2=FDCAN2
 Mcu.IP3=FDCAN3
 Mcu.IP4=FREERTOS
-Mcu.IP5=IWDG
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SPI4
-Mcu.IP9=SYS
-Mcu.IPNb=16
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI4
+Mcu.IP8=SYS
+Mcu.IP9=TIM2
+Mcu.IPNb=15
 Mcu.Name=STM32G474V(B-C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -174,18 +170,17 @@ Mcu.Pin30=PD2
 Mcu.Pin31=PB3
 Mcu.Pin32=PB4
 Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin34=VP_IWDG_VS_IWDG
-Mcu.Pin35=VP_SYS_VS_tim7
-Mcu.Pin36=VP_SYS_VS_DBSignals
-Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin38=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
+Mcu.Pin34=VP_SYS_VS_tim7
+Mcu.Pin35=VP_SYS_VS_DBSignals
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 Mcu.Pin4=PE6
 Mcu.Pin5=PC13
 Mcu.Pin6=PF0-OSC_IN
 Mcu.Pin7=PF1-OSC_OUT
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=39
+Mcu.PinsNb=38
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -356,7 +351,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI4_Init-SPI4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_UART4_Init-UART4-false-HAL-true,12-MX_UART5_Init-UART5-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI4_Init-SPI4-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_USART3_UART_Init-USART3-false-HAL-true,11-MX_UART4_Init-UART4-false-HAL-true,12-MX_UART5_Init-UART5-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
@@ -434,8 +429,6 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_IWDG_VS_IWDG.Mode=IWDG_Activate
-VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Mode=DSPOoLibraryJjLibrary
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
