--- a/R2_Master_V3.ioc
+++ b/R2_Master_V3.ioc
@@ -419,7 +419,7 @@ TIM2.PeriodNoDither=1000
 TIM2.Prescaler=170
 UART5.BaudRate=1152000
 UART5.IPParameters=BaudRate
-USART1.BaudRate=115200
+USART1.BaudRate=1152000
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.BaudRate=115200
